--- a/style.css
+++ b/style.css
@@ -124,9 +124,9 @@ nav .fa{
     }
 }
 
-/*---------- course --------*/
+/*---------- Hvad kan vi tilbyde --------*/
 
-.course{
+.produkt{
     width: 80%;
     margin: auto;
     text-align: center;
@@ -149,7 +149,7 @@ p{
     justify-content: space-between;  
 }
   
-.course-col{
+.produkt-col{
     flex-basis: 31%;
     background: #fff3f3;
     border-radius: 10px;
@@ -163,7 +163,7 @@ h3{
     font-weight: 600;
     margin: 10px 0;
 }
-.course-col:hover{
+.produkt-col:hover{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -173,22 +173,22 @@ h3{
     }
 } 
 
-/*---------------- campus ----------------*/
+/*---------------- Om os ----------------*/
 
-.campus{
+.om-os{
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 50px;
 }
-.campus-col{
+.om-os-col{
     flex-basis: 32%;
     border-radius: 10px;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
 }
-.campus-col img{
+.om-os-col img{
     width: 100%;
 }
 
@@ -221,43 +221,43 @@ h3{
     opacity: 1;
 }
 
-/*-------------- Facilities ----------------*/
+/*-------------- Tidligere Projekter ----------------*/
 
-.facility{
+.projekter{
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
 }
-.facility-col{
+.projekter-col{
     flex-basis: 31%;
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
 }
-.facility-col img{
+.projekter-col img{
     width: 100%;
     border-radius: 10px;
 }
-.facility-col p{
+.projekter-col p{
     padding: 0;
 }
-.facility-col h3{
+.projekter-col h3{
     margin-top: 16px;
     margin-bottom: 15px;
     text-align: left;
 }
 
-/*---------------- testimonials ------------------*/
+/*---------------- Samarbejdspartnere ------------------*/
 
-.testimonials{
+.sammen{
     width: 80%;
     margin: auto;
     padding-top: 100px;
     text-align: center;
 }
 
-.testimonial-col{
+.sammen-col{
     flex-basis: 44%;
     border-radius: 10px;
     margin-bottom: 5%;
@@ -267,25 +267,25 @@ h3{
     cursor: pointer;
     display: flex;
 }
-.testimonial-col img{
+.sammen-col img{
     height: 40px;
     margin-left: 5px;
     margin-right: 30px;
     border-radius: 50%;
 }
-.testimonial-col p{
+.sammen-col p{
     padding: 0;
 }
-.testimonial-col h3{
+.sammen-col h3{
     margin-top: 15px;
     text-align: left;
 }
-.testimonial-col .fa{
+.sammen-col .fa{
     color: #e09b13;
 }
 
 @media(max-width:700px){
-    .testimonial-col img{
+    .sammen-col img{
         margin-left: 0px;
         margin-right: 15px;
     }
@@ -330,7 +330,7 @@ h3{
 }
 
 .icons .fa{
-    color: #f44336;
+    color: #e09b13;
     margin: 0 13px;
     cursor: pointer;
     padding: 18px 0;
@@ -340,7 +340,7 @@ h3{
 }
 
 
-/*--------------- About Us Page --------------*/
+/*--------------- Om os --------------*/
 
 
 .sub-header{
