--- a/style.css
+++ b/style.css
@@ -133,12 +133,13 @@ nav .fa{
     padding-top: 100px;
 }
 h1{
-    font-size: 36px;
+    font-size: 40px;
     font-weight: 600;
+
 }
 p{
     color: #777;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
@@ -162,6 +163,7 @@ h3{
     text-align: center;
     font-weight: 600;
     margin: 10px 0;
+    font-size: 20px;
 }
 .produkt-col:hover{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
@@ -208,7 +210,7 @@ h3{
     width: 100%;
     font-weight: 500;
     color: #fff;
-    font-size: 26px;
+    font-size: 20px;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -322,11 +324,17 @@ h3{
     width: 100%;
     text-align: center;
     padding: 30px 0;
+    
 }
 .footer h4{
     margin-bottom: 25px;
     margin-top: 20px;
     font-weight: 600;
+    font-size: 15px;
+}
+
+.pfooter{
+    font-size: 13px;
 }
 
 .icons .fa{
