--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ h3{
     }
 } 
 
-/*---------------- Om os ----------------*/
+/*---------------- Om os forsiden ----------------*/
 
 .om-os{
     width: 80%;
@@ -354,11 +354,12 @@ h3{
 .sub-header{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(img/bernd-dittrich-KWnzfnJImww-unsplash.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
-    color: #fff;
+    color: #ffffff;
+    background-color: #ffffff;
 }
 .sub-header h1{
     margin-top: 100px;
@@ -382,20 +383,20 @@ h3{
 }
 
 .hero-btn.red-btn{
-    border: 1px solid #f44336;
+    border: 1px solid #bd7305;
     background: transparent;
-    color: #f44336;
+    color: #cf7003;
 }
 .hero-btn.red-btn:hover{
-    border: 1px solid #f44336;
-    background: #f44336;
+    border: 1px solid #f3831a;
+    background: #f77f10;
     color: #fff;
 }
 .hero-btn.red-btn::after{
-    background: #f44336;
+    background: #f7901a;
 }
 .hero-btn.red-btn::before{
-    background: #f44336;
+    background: #d16309;
 }
 .content-image{
     flex-basis: 50%;
@@ -404,79 +405,8 @@ h3{
     width: 100%;
 }
 
-/*---------- Blog Page -------------*/
 
-.blog-content{
-    width: 80%;
-    margin: auto;
-    padding: 60px 0;
-}
-.blog-left{
-    flex-basis: 65%;
-}
-.blog-right{
-    flex-basis: 32%;
-}
-.blog-left img{
-    width: 100%;
-}
-.blog-left h2{
-    color: #222;
-    font-weight: 600;
-    margin: 30px 0;
-}
-.blog-left p{
-    color: #999;
-    padding: 0;
-}
-
-.blog-right h3{
-    background: #f44336;
-    color: #fff;
-    padding: 7px 0;
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-.blog-right div{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #555;
-    padding: 8px;
-    box-sizing: border-box;
-}
-
-.comment-box{
-    border: 1px solid #ccc;
-    margin: 50px 0;
-    padding: 10px 20px;
-}
-
-.comment-box h3{
-    text-align: left;
-}
-.comment-form input, .comment-form textarea{
-    width: 100%;
-    padding: 10px;
-    margin: 15px 0;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-    background: #f0f0f0;
-}
-.comment-form button{
-    margin: 10px 0;
-}
-
-
-@media (max-width:700px){
-    .sub-header h1{
-        font-size: 24px;
-    }
-} 
-
-
-/*------- Contact Us Page ------------*/
+/*------- Kontakt os side ------------*/
 
 .location{
     width: 80%;
@@ -504,7 +434,7 @@ h3{
 
 .contact-col div .fa{
     font-size: 28px;
-    color: #f44336;
+    color: #d4830a;
     margin: 10px;
     margin-right: 30px;
 }
@@ -515,7 +445,7 @@ h3{
 .contact-col div h5{
     font-size: 20px;
     margin-bottom: 5px;
-    color: #555;
+    color: #f78b26;
     font-weight: 400;
     
 }
@@ -524,11 +454,11 @@ h3{
     padding: 15px;
     margin-bottom: 17px;
     outline: none;
-    border: 1px solid #ccc;
+    border: 1px solid #e68415;
 }
 
 .footer-link{
     text-decoration: none;
-    color: #777;
+    color: #f18e0d;
 }
 
