--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
     overflow: hidden;
 }
 
+body{
+    background-color: rgb(10, 10, 10);
+}
+
 nav{
     display: flex;
     padding: 2% 4%;
@@ -445,7 +449,7 @@ h3{
 .contact-col div h5{
     font-size: 20px;
     margin-bottom: 5px;
-    color: #f78b26;
+    color: #f0f0f0;
     font-weight: 400;
     
 }
@@ -454,7 +458,7 @@ h3{
     padding: 15px;
     margin-bottom: 17px;
     outline: none;
-    border: 1px solid #e68415;
+    border: 2px solid #e68415;
 }
 
 .footer-link{
