--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ h3{
 .sub-header{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(img/bernd-dittrich-KWnzfnJImww-unsplash.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(img/2151073786.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
@@ -434,12 +434,14 @@ h3{
 .contact-col{
     flex-basis: 48%;
     margin-bottom: 30px;
+    
 }
 
 .contact-col div{
     display: flex;
     align-items: center;
     margin-bottom: 40px;
+    
 }
 
 .contact-col div .fa{
