--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(3, 3, 3, 0.7),rgba(0, 0, 0, 0.7)),url(img/2151073786.jpg);
+    background-image: linear-gradient(rgba(3, 3, 3, 0.409),rgba(0, 0, 0, 0.299)),url(img/2151073786.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -17,12 +17,28 @@ body{
     background-color: rgb(16, 13, 10);
 }
 
+.logo4{
+    max-width: 80px;
+    max-height: 80px;
+    padding-left: 0px;
+}
+
 nav{
     display: flex;
     padding: 2% 4%;
     justify-content: space-between;
     align-items: center;
+    background-color: rgba(64, 36, 12, 0.826); 
+    position: fixed;
+    top: 0; left: 0; z-index: 999; height: 30px; 
+    border-radius: 20px;
+    
+    
+
 }
+
+
+
 nav img{
     width: 200px;
 }
@@ -56,6 +72,8 @@ nav img{
 nav .fa{
     display: none;
 }
+
+
 
 .text-box{
     width: 90%;
