--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Inter", sans-serif;
 }
+
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(3, 3, 3, 0.7),rgba(0, 0, 0, 0.7)),url(img/2151073786.jpg);
+    background-image: linear-gradient(rgba(48, 47, 47, 0.466),rgba(43, 42, 42, 0.466)),url(img/2151073786.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -18,8 +19,8 @@ body{
 }
 
 .logo4{
-    max-width: 70px;
-    max-height: 70px;
+    max-width: 75px;
+    max-height: 75px;
     padding-left: 0px;
 }
 
@@ -27,10 +28,7 @@ nav{
     display: flex;
     padding: 2% 4%;
     justify-content: space-between;
-    align-items: center;
-    background-color: rgba(64, 36, 12, 0.477); 
-    position: fixed;
-    top: 0; left: 0; z-index: 999; width: 95%; height: 50px; 
+    
 
 }
 
@@ -83,18 +81,19 @@ nav .fa{
 }
 .text-box h1{
     font-size: 70px;
+    font-weight: 600;
 }
 .text-box p{
     margin: 20px 0 40px;
     font-size: 17px;
     color: #fff;
-    font: weight 700px;;
+    font-weight: 400;
 }
 .hero-btn {
     display: inline-block;
     text-decoration: none;
     color: #fff;
-    border: 1px solid #e09b13;
+    border: 1px solid rgb(255, 115, 0);
     padding: 12px 34px;
     font-size: 16px;
     background: transparent;
@@ -105,8 +104,8 @@ nav .fa{
 }
 
 .hero-btn:hover{
-    border: 1px solid #e09b13;
-    background: #e09b13;
+    border: 1px solid rgb(255, 115, 0);
+    background: linear-gradient(rgb(255, 115, 0, 0),rgb(255, 115, 0, 0));
     transition: 1s;
 }
 
@@ -136,12 +135,15 @@ nav .fa{
         display: block;
         color: #fff;
         margin: 10px;
-        font-size: 22px;
+        font-size: 30px;
         cursor: pointer; 
     }
     .text-box h1{
-        font-size: 20px;
+        font-size: 50px;
     }
+   
+
+  
 }
 
 /*---------- Hvad kan vi tilbyde --------*/
