--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-color: rgb(16, 13, 10);
+    background-color: rgb(27, 17, 9);;
 }
 
 .logo4{
@@ -56,7 +56,7 @@ nav img{
     content: '';
     width: 0%;
     height: 2px;
-    background: #eda618;
+    background: #ff7300;
     display: block;
     margin: auto;
     transition: .4s;    
@@ -96,7 +96,7 @@ nav .fa{
     border: 1px solid rgb(255, 115, 0);
     padding: 12px 34px;
     font-size: 16px;
-    background: transparent;
+    background: linear-gradient(rgba(188, 108, 37, 0.295),rgb(188, 138, 37, 0.295));
     position: relative;
     cursor: pointer;
     transition: 1s;
@@ -105,7 +105,7 @@ nav .fa{
 
 .hero-btn:hover{
     border: 1px solid rgb(255, 115, 0);
-    background: linear-gradient(rgb(255, 115, 0, 0),rgb(255, 115, 0, 0));
+    background: rgb(255, 115, 0);
     transition: 1s;
 }
 
@@ -119,7 +119,7 @@ nav .fa{
     .nav-links
     {
         position: fixed;
-        background: #e09b13;
+        background: rgb(255, 115, 0);
         height: 100vh;
         width: 200px;
         top: 0;
@@ -166,9 +166,11 @@ h1{
 p{
     color: #0e0e0e;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 22px;
-    padding: 10px;
+    padding-top: 40px;
+    margin-bottom: auto;
+    
 }
 .row{
     margin-top: 5%;
@@ -178,12 +180,25 @@ p{
   
 .produkt-col{
     flex-basis: 31%;
-    background: #f7eee3;
+    background: #ffe4cd;
     border-radius: 25px;
     margin-bottom: 5%;
     padding: 20px 12px;
     box-sizing: border-box;
     transition: .5s;
+    border-style: solid;
+    border-width: thick;
+    border-color: #ff7300;
+}
+
+.om-os-p{
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    padding-top: 40px;
+    margin-bottom: auto;
+    
 }
 h3{
     text-align: center;
@@ -193,12 +208,16 @@ h3{
     color: black;
 }
 .produkt-col:hover{
-    box-shadow: 0 0 20px 0px rgba(255, 165, 97, 0.55);
+    box-shadow: 0 0 30px 0px rgb(255, 115, 0);
 }
 
 @media (max-width:700px){
     .row{
         flex-direction: column;
+        margin-top: 12%;
+    }
+    h1{
+        font-size: 35px;
     }
 } 
 
