--- a/style.css
+++ b/style.css
@@ -449,23 +449,33 @@ h3{
     font-weight: 600;
     font-size: 15px;
     color: #f0f0f0;
+    line-height: 50px;
+    
 }
 
 
 .pfooter{
-    font-size: 13px;
+    font-size: 14px;
     color: #f0f0f0;
+    padding-top: 20px;
+    padding-bottom: 25px;
 }
 
 .icons1 .fa{
-    color: rgba(255, 115, 0, 0.82);
+    color:  rgb(255, 115, 0);
     margin: 0 13px;
     cursor: pointer;
     padding: 18px 0;
     font-size: 20px;
+    padding-bottom: 10px;
 }
 .fa-heart-o{
-    color: #fff
+    color:  rgb(255, 115, 0);
+}
+
+.footer-link p{
+    color: #f0f0f0;
+    font-size: 15px;
 }
 
 
@@ -504,9 +514,11 @@ h3{
 }
 
 .hero-btn.red-btn{
-    border: 1px solid #bd7305;
-    background: transparent;
-    color: #cf7003;
+    border: 1px solid;
+    
+    border-color: rgb(255, 115, 0, 0.82);
+    background: linear-gradient(rgba(188, 107, 37, 0.575),rgba(188, 128, 37, 0.557));
+    color: #f0f0f0;
 }
 .hero-btn.red-btn:hover{
     border: 1px solid #f3831a;
@@ -535,9 +547,12 @@ h3{
     width: 80%;
     margin: auto;
     padding: 80px 0;
+    
 }
+
 .location iframe{
     width: 100%;
+    
 }
 
 .contact-us{
@@ -559,13 +574,14 @@ h3{
 
 .contact-col div .fa{
     font-size: 28px;
-    color: #d4830a;
+    color: rgb(255, 115, 0);
     margin: 10px;
     margin-right: 30px;
 }
     
 .contact-col div p{
     padding: 0;
+    color: #f0f0f0;
 }
 .contact-col div h5{
     font-size: 20px;
@@ -580,6 +596,9 @@ h3{
     margin-bottom: 17px;
     outline: none;
     border: 2px solid #e68415;
+    border-width: thick;
+    border-radius: 15px;
+    background-color: #ffe4cd;
 }
 
 .footer-link{
