--- a/style.css
+++ b/style.css
@@ -3,7 +3,36 @@
     padding: 0;
     font-family: "Inter", sans-serif;
 }
+.toppen{
+    text-decoration: underline;
+    color: #dfdfdf;
+}
 
+
+/* scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #ff730015;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #ff7300;
+    border-radius: 15px;
+    
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #ff730080;
+  }
+ 
 .header{
     min-height: 100vh;
     width: 100%;
@@ -23,16 +52,11 @@ body{
     max-height: 75px;
     padding-left: 0px;
 }
-
 nav{
     display: flex;
     padding: 2% 4%;
     justify-content: space-between;
-    
-
 }
-
-
 
 nav img{
     width: 200px;
@@ -166,6 +190,10 @@ h1{
 .tilbyd-p-overskrift{
     color: #fff;
 }
+
+.service-link{
+    text-decoration: none;
+}
 p{
     color: #0e0e0e;
     font-size: 16px;
@@ -179,6 +207,7 @@ p{
     margin-top: 5%;
     display: flex;
     justify-content: space-between;  
+    
 }
   
 .produkt-col{
@@ -192,6 +221,7 @@ p{
     border-style: solid;
     border-width: thick;
     border-color: #ff7300;
+    
 }
 
 .om-os-p{
@@ -247,6 +277,7 @@ h3{
     width: 100%;
     
 }
+
 
 .layer{
     background: transparent;
@@ -304,6 +335,7 @@ h3{
     border-width: thick;
     text-align: center;
     background-color: #ffe4cd;
+    height: fit-content;
 
 }
 .projekter-col img{
@@ -324,6 +356,7 @@ h3{
     padding: 0;
     color: #0e0e0e;
     margin-bottom:  10px;
+
 }
 .projekter-col h3{
     margin-top: 16px;
@@ -359,7 +392,7 @@ h3{
 .sammen-col{
     flex-basis: 44%;
     border-radius: 15px;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
     text-align: left;
     background: #ffe4cd;
     padding: 25px;
@@ -409,7 +442,7 @@ h3{
     background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0, 0, 0, 0.452)),url(img/cytonn-photography-n95VMLxqM2I-unsplash-hand-shake.jpg);
     background-position: center;
     background-size: cover;
-    border-radius: 10px;
+    border-radius: 15px;
     text-align: center;
     padding: 100px 0;
     border-style: solid;
@@ -427,6 +460,9 @@ h3{
 @media(max-width:700px){
     .cta h1{
         font-size: 24px;
+    }
+    .contact-col{
+        margin-right: 25%;
     }
 }
 
@@ -606,8 +642,133 @@ h3{
     color: #f18e0d;
 }
 
+/*------- Om Os ------------*/
+.os-side-start{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+.os-side{
+    font-size: 25px;
+    font-weight: 600;
+    color: #0e0e0e;  
+}
+.kort-om-os-p{
+color: #f0f0f0;
+}
+.row-om-os{
+    margin-top: 5%;
+    justify-content: space-between; 
+}
+.os-side-col{
+    flex-basis: 40%;
+    background: #ffe4cd;
+    border-radius: 25px;
+    margin-bottom: 5%;
+    padding: 20px 30px;
+    box-sizing: border-box;
+    transition: .5s;
+    border-style: solid;
+    border-width: thick;
+    border-color: #ff7300;
+    padding-top: 30px;
+}
+.os-side-pp{
+    color: #0e0e0e;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    padding-top: 30px;
+    margin-bottom: auto;
+    padding-bottom: 30px;
+}
+
+/*------- Om Os billeder ------------*/
+.om-os-sektion{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 80px;
+}
+.om-os-p-top{
+    color: #dfdfdf;
+}
+.row-om-os1{
+    margin-top: 5%;
+    justify-content: space-between;
+    
+}    
+
+.row-om-os{
+    margin-top: 5%;
+    justify-content: space-between;
+    display: flex;
+    padding: 20px 12px 
+}    
+
+.projekter-col2{
+    flex-basis: 30%;
+    
+    border-radius: 15px;
+    margin-bottom: 5%;
+    text-align: left;
+    border-style: solid;
+    border-color: rgba(255, 115, 0, 0.82);
+    border-width: thick;
+    text-align: center;
+    background-color: #ffe4cd;
+    height: fit-content;
+    padding-bottom: 2%;
+    
+    
+    
+
+}
+.projekter-col2 img{
+    
+    width: 100%;
+    border-radius: 10px;
+    height: 50%;
+    object-fit:cover;
+    
+    
+}
+.projekter-col2 h3{
+    font-size: 20px;
+    
+
+}
+.projekter-col2 h4{
+    padding-bottom: 2%;
+}
+
+.projekter-col2 p{
+    padding: 0;
+    color: #0e0e0e;
+    font-size: 16px;
+    
+}
+.projekter-col2 h3{
+    margin-top: 16px;
+    margin-bottom: 15px;
+    text-align: center;
+    color: #0e0e0e;
+    font-weight: 600;
+    
+}
 
 
-/*Hvem er vi siden*/
 
+@media (max-width:700px){
+    .row-om-os{
+        flex-direction: column;
+        margin-top: 12%;
+    }
+    h1{
+        font-size: 35px;
+    }
+   
+} 
 
+/*------- Produkt side ------------*/
